@@ -69,7 +69,11 @@ cc_install_link() {
 }
 cc_links() {
 	local a
-	for a in gcc cc c++ g++ icc icpc clang clang++ ; do
+	for a in gcc cc c++ g++ ; do
+		eval "cc_${1}_link" "${2}${2:+-}${a}"
+	done
+	[ "${1}" = install ] && [ -n "${2}" ] && return
+	for a in icc icpc clang clang++ ; do
 		eval "cc_${1}_link" "${2}${2:+-}${a}"
 	done
 }
