@@ -2,6 +2,9 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  03 Nov 2013; Martin Väth <martin@mvath.de>:
+  Update ebuild from tree. Do not produce broken icc, clang links
+
   07 Oct 2013; Martin Väth <martin@mvath.de>:
   Add latest changes from the Gentoo tree (support also icc, fix tests)
 
