@@ -2,6 +2,11 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*cpplint-116 (03 Nov 2013)
+
+  03 Nov 2013; Martin Väth <martin@mvath.de>:
+  Follow svn version number. Fix download with static svn version
+
 *cpplint-3.260_p114 (26 Oct 2013)
 
   26 Oct 2013; Martin Väth <martin@mvath.de>:
